# rust-training

./: .gitignore  Cargo.toml
cph/search/binary1/: Cargo.toml
cph/search/binary1/src/: main.rs
cph/sorting/bubble/: Cargo.toml
cph/sorting/bubble/src/: main.rs
cph/sorting/merge/: Cargo.toml
cph/sorting/merge/src/: main.rs
cph/structures/map/: Cargo.toml
cph/structures/map/src/: main.rs
cph/structures/set/: Cargo.toml
cph/structures/set/src/: main.rs
fuel/blob/: Cargo.toml
fuel/blob/src/: main.rs
fuel/block-transition-validation/: .gitignore  Cargo.toml  Makefile  TODO.md  block_a.bincode  block_b.bincode
fuel/block-transition-validation/src/: bootstrap.rs  dbsnap.rs  load.rs  main.rs  memstore.rs  serialization.rs
fuel/block-transition-validation/src/cli/: cli.rs
fuel/block-transition-validation/src/dbsnap/: dbsnap.rs
fuel/block-transition-validation/src/json/: json.rs
fuel/block-transition-validation/src/memstore/: memstore.rs
fuel/block-transition-validation/src/serialization/: bincode.rs  json.rs  lib.rs
fuel/block-transition-validation/src/wallet/: wallet.rs
gcr/day_1/array/src/: main.rs
gcr/day_1/luhn/: Cargo.toml
gcr/day_1/luhn/src/: main.rs
gcr/day_2/health/: Cargo.toml
gcr/day_2/health/src/: main.rs
gcr/day_2/iterators/src/: main.rs
getting-started/automated_testing/: Cargo.toml
getting-started/automated_testing/src/: main.rs  others.rs
getting-started/automated_testing/src/others/: another_answer.rs  answer.rs
getting-started/cli/: Cargo.toml
getting-started/cli/src/: main.rs
getting-started/config/: Cargo.toml
getting-started/config/src/: main.rs
getting-started/ctf/: Cargo.toml
getting-started/ctf/src/: main.rs
getting-started/error-codes/: Cargo.toml
getting-started/error-codes/src/: main.rs
getting-started/loader/: Cargo.toml
getting-started/loader/src/: main.rs
getting-started/logging/src/: main.rs
getting-started/output/: Cargo.toml
getting-started/output/src/: main.rs
getting-started/signals/: Cargo.toml
getting-started/signals/src/: main.rs
x509/: Cargo.toml
x509/src/: main.rs
x509/test_artifacts/: cert.p12  cert.pem  private_key.key  test_p12.p12
x509/test_artifacts/ca/: ca-cert.pem  ca-cert.srl  ca-key.pem  ca.p12
x509/test_artifacts/member/: member-cert.pem  member-csr.pem  member-key.pem  member.p12
