[workspace]

members = [
    "getting-started/cli/",
    "getting-started/output/",
    "getting-started/loader/",
    "getting-started/ctf/",
    "getting-started/logging",
    "getting-started/automated_testing",
    "getting-started/signals",
    "getting-started/config",
    "getting-started/error-codes",
    "x509",
    "fuel/block-transition-validation",
    "cph/sorting/bubble",
    "cph/sorting/merge",
    "cph/search/binary1",
    "cph/structures/set",
    "cph/structures/map",
    "gcr/day_1/array",
]