[package]
name = "x509"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
p12 = "0.6.3"
openssl = {version = "0.10.55", features = ["vendored"]}
hex = "0.4.3"