[package]
name = "block-transition-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive", "cargo"]}
fuel-core = {version = "0.20.8", features = ["relayer", "rocksdb"]}
fuel-core-types = {version = "0.20.8", features = ["test-helpers"]}
fuel-core-storage = "0.20.8"
fuels={version = "0.50.1", features=["std", "rocksdb", "fuel-core-lib"]}
fuel-tx = { version = "0.35.3", default-features = false, features = ["builder", "serde"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.104"
bincode = "1.3.3"